# bachelorarbeit

./: .gitignore  :  Cargo.toml  README  README.md
benches/: benchmark.rs  my_benchmark.rs
src/: main.rs
src/ba/: Cargo.toml
src/ba/src/: bufferreader.rs  lib.rs
src/ba/src/buffermanager/: diskreader.rs  mod.rs  push_buf_man.rs
src/ba/src/operator/: buffer_mock.rs  filter.rs  hashjoin.rs  mock_scan.rs  mod.rs  scan.rs  unary.rs
src/ba/src/push_operator/: mod.rs  pus_test.rs  push_binary.rs  push_buf_manager.rs  push_buffer_mock.rs  push_filter.rs  push_hashjoin.rs  push_scan.rs  push_sink.rs  push_unary.rs
src/exaples/: 1  2  3  4  LRU  LRU-Multithreadded  multiprocessor  push based processor
