[package]
name = "ba_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
#https://docs.rs/rio/latest/rio/
rio = "0.9.4"
tokio-uring = { version = "0.4.0" }
tokio ={version="1.23.0", features=["macros","rt"]}
